# jane-street-puzzle

./: .gitignore  NOTES.md  PLAN.md  README.md  candidate_list.txt  error.txt  final_validation_candidates.txt  logging.txt  pyproject.toml  run_exp17.sh  run_exp18a.sh  run_exp18a_v2.sh  run_exp18c.sh  run_exp19.sh  run_exp20.sh  run_exp21.sh  run_exp21b.sh  run_exp22.sh  run_exp23.sh  run_exp24.sh  run_exp25.sh  run_exp26.sh  run_exp27.sh  run_exp28.sh  run_final_validation.sh  run_next_experient.sh  run_next_experiment.sh
blog/: 01-getting-started.md  02-behavioral-experiments.md  03-linear-probes.md  04-model-diffing.md  05-trigger-scan.md  06-trigger-search.md  07-bf16-verification.md  08-vocabulary-analysis.md  09-generate-and-test.md  README.md
configs/: warmup_model.yaml
research/: INDEX.md  dormant_llm_puzzle.ipynb  guide.md  warmup_model_report.md  warmup_research_report.md
scripts/: analyze_embed_deltas.py  analyze_layer0_qproj.py  analyze_layer27_output.py  exp0_behavioral_scan.py  exp10_output_priming.py  exp11_bf16_verify.py  exp11b_bf16_broad.py  exp11c_bf16_exhaustive.py  exp12_vocab_analysis.py  exp12b_beam_search.py  exp12c_phrase_search.py  exp13_generate_and_test.py  exp13b_long_phrases.py  exp14_perhead_analysis.py  exp15_rope_scorer.py  exp16_gradient_inversion.py  exp16b_hybrid_gpu.py  exp17_behavioral_profiling.py  exp18a_kl_inversion.py  exp18c_layer27_divergence.py  exp19_gcg.py  exp1_token_sweep.py  exp1b_chunked_sweep.py  exp20_response_generation.py  exp21_english_gcg.py  exp21b_curated_gcg.py  exp22_weight_reverse.py  exp4_train_probes.py  (+17 more)
(+93 files in other folders)
